posiGen_FullsendBox/src/objects/Meta_Data_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Meta Data Assignments</relationshipLabel>
        <relationshipName>Meta_Data_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Id__c</fullName>
        <label>File Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_name__c</fullName>
        <label>File name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meta_Data_Assignment_Column__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meta Data Assignment Column</label>
        <referenceTo>Meta_Data_Assignment_Column__c</referenceTo>
        <relationshipLabel>Meta Data Assignments</relationshipLabel>
        <relationshipName>Meta_Data_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Meta Data Assignments</relationshipLabel>
        <relationshipName>Meta_Data_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uploaded_at__c</fullName>
        <label>Uploaded at</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded_by__c</fullName>
        <label>Uploaded by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Meta Data Assignment</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meta Data Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>